--- a/styles.css
+++ b/styles.css
@@ -3,31 +3,64 @@
    --grid-rows: 1;
 }
 
-body {
-   margin: 0;
+*, *::before, *::after {
+   box-sizing: border-box;
    padding: 0;
-   background-color: white;
+   margin: 0;
 }
 
+body {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-evenly;
+   align-items: center;
+   margin: 0;
+   padding: 0;
+   background-color: rgba(236, 236, 236, .5);
+}
+
+header {
+   display: flex;
+   width: 100%;
+   height: 150px;
+   justify-content: center;
+   align-items: center;
+   font-weight: bold;
+   font-size: 80px;
+   font-family: "Courier New";
+}
 #container {
+   border: 1px solid black;
    display: grid;
-   grid-gap: 0.1em;
    grid-template-rows: repeat(var(--grid-rows), 1fr);
    grid-template-columns: repeat(var(--grid-cols), 1fr);
-   height: 60%;
-   width: 750px;
-   position: absolute;
-   top: 20%;
-   left: 30%;
+   height: 600px;
+   width: 600px;
+   box-shadow: 8px 8px 5px rgba(210, 215, 211);
+}
+
+#settings {
+   display: flex;
+   border: 1px solid gray;
+   justify-content: center;
+   row-gap: 30px;
+   flex-direction: column;
+   padding: 50px;
+   border-radius: 30px 30px 30px 30px;
+   box-shadow: 0px 0px 5px 10px rgba(210, 215, 211);
 }
 
 .gridItem {
-   padding: 0.5em;
-   border: 1px solid black;
-   text-align: center;
    color: black;
    background-color: white;
-   width: 25px;
-   height: 20px;
+   z-index: 1
 }
 
+button {
+   height: 75px;
+   width: 200px;
+   border-radius: 10px 10px 10px 10px;
+   font-family: "Courier New";
+   font-size: 24px;
+   font-weight: bold;
+}
